# aihedgefond

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  cursor-draft-ready.yml
docs/: IMPLEMENTATION ROADMAP.md  LIVE_GATE_NULL_REPORT_2026-07-17.md  PLAN_P3_SLICE1_DSR_FIX.md
docs/reports/: P2_FEATURE_CLASS_TRIAGE.md  P2_INSIDER_FORM4_TRIAGE.md  P2_META_LABELING.md  P2_SMALL_CAP_UNIVERSE_DIAGNOSTIC.md  P2_UNIVERSE_BREADTH_DIAGNOSTIC.md  P3_ALL_NEW_GATE.md  P3_INSIDER_COMBO_GATE.md  P3_META_LABELING_GATE.md  P3_SLICE1_PERMUTATION_NULL.md
scripts/: manual_yfinance_check.py  run_cpcv_dsr_gate.py  run_feature_class_triage.py  run_gate_on_all_new_features.py  run_gate_on_insider_combo.py  run_gate_on_meta_labeling.py  run_gate_permutation_null.py  run_horizon_sweep.py  run_insider_form4_triage.py  run_meta_labeling_triage.py  run_momentum_breadth_probe.py  run_real_baseline.py  run_small_cap_universe_diagnostic.py  run_universe_breadth_diagnostic.py
src/aihedgefund/: __init__.py
src/aihedgefund/audit/: __init__.py
src/aihedgefund/backtest/: __init__.py
src/aihedgefund/config/: __init__.py  limits.yaml
src/aihedgefund/core/: __init__.py  bus.py  config.py  ports.py  runtime.py  schemas.py
src/aihedgefund/dashboard/: __init__.py
src/aihedgefund/data/: __init__.py  corporate_actions.py  form4_quality.py  provider.py  quality.py
src/aihedgefund/execution/: __init__.py
src/aihedgefund/features/: __init__.py  feature_classes.py  indicators.py  insider.py  pipeline.py  pit.py
src/aihedgefund/labels/: __init__.py  fracdiff.py  (+2 more)
tests/: test_feature_class_triage.py  test_gate_on_all_new_features.py  test_gate_on_insider_combo.py  test_gate_on_meta_labeling.py  test_meta_labeling.py  test_momentum_breadth_probe.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_sec_edgar_form4.py  test_small_cap_universe_diagnostic.py  test_universe_breadth_diagnostic.py
tests/fixtures/: meta_close_2015_2026.csv  msft_close_2015_2026.csv
(+32 files in other folders)
