[tool.poetry]
name = "aihedgefund"
version = "0.1.0"
description = "Event-driven AI hedge fund platform"
authors = ["DarkMatter2010"]
readme = "README.md"
packages = [{ include = "aihedgefund", from = "src" }]
include = [{ path = "src/aihedgefund/config/*.yaml", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "2.13.4"
pyyaml = "6.0.3"
yfinance = "1.5.1"
pandas = "3.0.3"
numpy = "2.5.1"
scipy = "1.18.0"
statsmodels = "0.14.6"

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
ruff = "0.15.21"
mypy = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "statsmodels.*", "yaml", "yfinance"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
